# goit-python

./: .gitignore
Core/Module_06/: sortirovka.py
Core/Module_07/: setup.py
Core/Module_08/: dict_birthdays.py  m8.py
Core/Module_09/: contacts.py  handler.py  main.py  parsers.py
Core/Module_10/: contact_book.py  main.py
Core/Module_11/: contact_book.py  gen_users.py  main.py
Core/Module_12/: contact_book.py  gen_users.py  main.py
Data_science/Module_01/: Hw1.ipynb
Data_science/Module_02/: Hw2_1.ipynb  Hw2_2.ipynb  Hw2_3.ipynb
Data_science/Module_03/: HW3_3_stock_profitability.ipynb  Hw_3_1_graphs.ipynb  Hw_3_2_sierpinski_triangle.ipynb
Data_science/Module_04/: Hw4_1.ipynb  Hw4_2.ipynb
Data_science/Module_06/: Hw6_pyspark.ipynb
Data_science/Module_07/: Hw_7_1_wine.ipynb  Hw_7_2_iris.ipynb  Hw_7_3_diabetes.ipynb
Data_science/Module_08/: Hw_8_Overfitting.ipynb
Data_science/Module_09/: Hw_9_tensorflow_mnist.ipynb
Data_science/Module_10/: Hw10_fashion_mnist_Keras.ipynb
Data_science/Module_11/: Hw11_Keras_fashionmnist_convolution.ipynb
Web/Module_01/: abstract.py  meta.py  readme.md
Web/Module_02/: readme.md
Web/Module_03/: dockerfile  pyproject.toml  readme.md  requirements.txt
Web/Module_03/assistant/: help.py  main.py
Web/Module_03/assistant/models/: custom_exceptions.py  fields.py  note.py  person.py  print_interface.py
Web/Module_03/assistant/tools/: autocompletion.py
Web/Module_04/: readme.md  sorting_thread.py  sorting_threadpool.py
Web/Module_05/: readme.md  simple.py  with_processpool.py
Web/Module_06/: readme.md  (+1 more)
(+47 files in other folders)
