[tool.poetry]
name = "module-03"
version = "0.1.0"
description = ""
authors = ["Valerii Sydorenko <valerasidorenko@gmail.com>"]
readme = "README.md"
packages = [{include = "module_03"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.1"
email-validator = "^1.3.1"
phonenumbers = "^8.13.4"
prompt-toolkit = "^3.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
